[package]
name = "solana_websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.14"
solana-sdk = "1.14"
solana-transaction-status = "1.14"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
url = "2.3"